fix collection image layout on mobile

--- a/css/responsive/mobile.styl
+++ b/css/responsive/mobile.styl
@@ -75,6 +75,7 @@ body.single-collection
     margin: 0
 
 .single-collection-row
+  display: block 
   justify-content: center
 
 .single-collection-item
