--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -51,12 +51,13 @@ body.single-collection
   overflow-x: scroll
 
 .single-collection-row
+  display: flex
   position: absolute
   top: 0
   left: 0
   height: 100%
   justify-content: initial
-  flex-wrap: nowrap
+  flex-wrap: nowrap 
 
 .single-collection-item
   padding: 0 30vw 0 10vw
